# DRF-Platzi

./: .gitignore  README.md  manage.py  pyproject.toml
bookings/: apps.py  models.py  serializers.py  urls.py  viewsets.py
bookings/migrations/: 0001_initial.py
doctorapp/: settings.py  urls.py
doctorapp/utils/: schema_generator.py
doctors/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
patients/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
patients/migrations/: 0001_initial.py
