[project]
name = "drf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-seed>=0.3.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-yasg>=1.21.10",
    "psycopg>=3.2.10",
    "psycopg2-binary>=2.9.10"
]

[tool.ruff]
line-length = 80
indent-width = 2
exclude = [
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
exclude = ["migrations"]
